kubernetes/apps/paseo/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paseo-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`paseo.mauzlab.de`)
      services:
        - name: paseo
          port: 6767
  tls: {}
